simplify search endpoint
