# controllers/recipes_controller.js
@@ -24,7 +24,7 @@ module.exports = {
   },
 
   /**
-   * Find a recipe
+   * Find recipes
    * @param req {request object}
    * @param res {response object}
    */
@@ -37,7 +37,8 @@ module.exports = {
         return Recipe.findOne({ url: req.query.url, userId: req.userId })
           .then(dbRecipe => {
             if (dbRecipe) {
-              return res.send(dbRecipe)
+              const results = { count: 1, recipes: [dbRecipe] }
+              return res.send(results)
             } else {
               return res.sendStatus(404)
             }
